force-app/main/default/objects/ER_MCC_Authorization__c/ER_MCC_Authorization__c.object-meta.xml
<CustomObject>
    <label>MCC Authorization</label>
    <nameField>
        <displayFormat>MCC-{0000}</displayFormat>
        <label>MCC Authorization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCCs Authorization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>