force-app/main/default/objects/ER_MCC_Authorization__c/fields/ER_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>ER_Behaviour__c</fullName>
    <label>Behaviour</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCEPT</fullName>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>