force-app/main/default/objects/ER_MCC_Authorization__c/fields/ER_Loop__c.field-meta.xml
<CustomField>
    <fullName>ER_Loop__c</fullName>
    <label>Loop</label>
    <referenceTo>ER_Loop__c</referenceTo>
    <relationshipName>MCC_Loops_Association</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>