force-app/main/default/objects/ER_MCC_Authorization__c/fields/ER_MCC__c.field-meta.xml
<CustomField>
    <fullName>ER_MCC__c</fullName>
    <label>MCC</label>
    <referenceTo>ER_MCC__c</referenceTo>
    <relationshipLabel>MCCs Authorization</relationshipLabel>
    <relationshipName>MCC_Authorization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>