force-app/main/default/objects/ER_MCC_Authorization__c/fields/UniqueMCCAuthID__c.field-meta.xml
<CustomField>
    <fullName>UniqueMCCAuthID__c</fullName>
    <label>UniqueMCCAuthID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>