force-app/main/default/objects/ER_MCC_Authorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ER_MCC__c</columns>
    <columns>ER_Loop__c</columns>
    <columns>ER_Behaviour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>